# scicomp

./: .gitignore  CMakeLists.txt  Makefile  WaveOrthotope.hpp  cmake_install.cmake  core.1406283  core.1406287  core.1741331  core.1961849  core.1962084  core.2162697  core.2162698  core.2162699  core.2162701  core.2162702  core.2162703  core.2162706  core.2162707  core.2162708  core.2162711  core.2167306  core.2167772  core.3395317  cpp-optimization.md  cpp-optimization.txt  energy_2d.jl  optimize  optimize.cpp  out_small.wo  slurm-8556560.out  slurm-8556561.out  small-test.wo  small_1.wo  small_final.wo  small_thread.txt  solve.jl  step_2d.jl  tiny-out.wo  tiny.wo  tiny_1.wo  (+8 more)
WaveSim_submit/: .gitignore  Artifacts.toml  Project.toml  README.md  WaveOrthotope.jl  WaveSim.jl  energy_2d.jl  io.jl  solve.jl  step.jl  step_2d.jl  utils.jl
WaveSim_submit/examples/: animate-phase-1.jl
WaveSim_submit/src/: WaveOrthotope.jl  WaveSim.jl  energy.jl  energy_2d.jl  io.jl  solve.jl  step.jl  step_2d.jl  utils.jl
WaveSim_submit/test/: runtests.jl
WaveSim_submit/wavefiles/: 2d-tiny-out.wo  chk-0000.62.wo  chk-0000.71.wo  chk-0011.19.wo  chk-0011.20.wo  chk-0011.21.wo  chk-0011.22.wo  chk-0027.96.wo  out.wo  small.wo  small_out.wo  small_test.wo
